--- a/index.html
+++ b/index.html
@@ -7,12 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Conversor de Monedas</title>
 
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <!-- Styles -->
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
 <div id="containerLoading">
-    <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+    <div class="lds-roller">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
     <p>Cargando...</p>
 </div>
 <div class="wrapper">
@@ -35,7 +46,8 @@
             </button>
         </form>
         <article class="result" id="result">
-            <small><strong>Instrucciones:</strong> <br /> Ingrese un monto en Pesos Chilenos, luego elija la moneda y finalmente presione el botón Convertir</small>
+            <small><strong>Instrucciones:</strong> <br/> Ingrese un monto en Pesos Chilenos, luego elija la moneda y
+                finalmente presione el botón Convertir</small>
         </article>
         <article>
             <h1 id="historialTitle" class="historial-title">Historial de valores</h1>
