Se refactorizaron las dependencias de las funciones y se mejoró la legibilidad del código

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 Convertir
             </button>
         </form>
-        <article class="result" id="result">
+        <article class="result" id="showResult">
             <small><strong>Instrucciones:</strong> <br/> Ingrese un monto en Pesos Chilenos, luego elija la moneda y
                 finalmente presione el botón Convertir</small>
         </article>
