Corrección menor en el trigger de conversión

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         </article>
     </main>
     <footer>
-        <p>Felipe JQ - { <a href="https://github.com/felipejoq/conversor-monedas" target="_blank">repository</a> } ~ Data from <a href="https://mindicador.cl/">mindicador.cl</a></p>
+        <p>Felipe JQ - { <a href="https://github.com/felipejoq/conversor-monedas" target="_blank">repository</a> } ~
+            Data from <a href="https://mindicador.cl/">mindicador.cl</a></p>
     </footer>
 </div>
 
