Se aceptan decimales en el input de pesos y se le quita el formato al valor convertido

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="info-if-error" id="infoErrorGetData"></div>
         <form class="currency-converter-form" id="currencyConverterForm">
             <label for="amountInput">Pesos (CLP):</label>
-            <input type="number" name="amount" id="amountInput" placeholder="Ingrese monto aquí..."/>
+            <input type="number" name="amount" id="amountInput" placeholder="Ingrese monto aquí..." step="any"/>
             <div class="error-message" id="amountErrorMessage"></div>
             <label for="currencySelect">Moneda a convertir:</label>
             <select name="currency" id="currencySelect">
